--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires-python = ">=3.10"
 dependencies = [
     "pillow>=10.0.0",
     "numpy>=2.2.0",
-    "opencv-python>=4.8.0",
+    "opencv-python-headless>=4.8.0",
     "pyyaml>=6.0",
 ]
 
